updated README, updated dockerfile
README now contains "steps" from start to end, with tried and tested commands that work from scratch. Added Dockerfile.local and utilized it in STEP 1 in order to allow for simpler initialization of docker image.

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -14,5 +14,5 @@ RUN gem install rails
 # Set working directory
 WORKDIR /app
 # Keep container running for interactive use
-CMD [“/bin/bash”]
+CMD ["/bin/bash"]
 
