Changed README, added Dockerfile.local (again) and created scripts for setup and connecting to bash
README is now a LOT shorter, a LOT simpler, and should be much, much easier to use. Dockerfile.local is used in the build_local script, so PLEASE DO NOT TOUCH IT unless you know what you are doing. connect_local is used to simply connect to the containers without the hassle of checking if they are running or not.

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -7,20 +7,31 @@ RUN apt-get update -qq && apt-get install -y \
     postgresql-client \
     nodejs \
     npm
+
 # Install Yarn
 RUN npm install -g yarn
+
 # Install Rails
 RUN gem install rails
+
+
+# Install Heroku CLI
+RUN curl -fsSL https://cli-assets.heroku.com/install-ubuntu.sh | bash
+
+
 # Set working directory
-# WORKDIR /app
+WORKDIR /app
 
-# COPY Gemfile* /app/
-# RUN bundle install
-# RUN bundle exec rails assets:precompile
-# EXPOSE 3000
-# RUN chmod +x bin/rails
-# RUN bin/rails db:create
-# RUN bin/rails db:migrate
+# Copy application files
+COPY . /app/
 
-# Keep container running for interactive use
-CMD [“/bin/bash”]
+# Install gems
+RUN bundle install
+
+#precompile assets
+RUN bundle exec rails assets:precompile
+EXPOSE 3000
+
+#Ensure bin files are executable
+RUN sed -i 's/\r$//' bin/*
+RUN chmod +x bin/rails
