README, .env file instructions written into script files.
The README is now slightly updated, and most of the scripts, when ran, will give you errors when you don't have the necessary .env variables. The amount of .env variables has been added to with the intention of allowing flexibility and security for our data (username, passwords, heroku app name, etc.)

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,16 +15,16 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: postgres
-  port: 5432
-  username: postgres
-  password: password
+  pool: 5
+  host: <%= ENV['DATABASE_HOST'] || 'localhost' %>
+  username: <%= ENV['DATABASE_USERNAME'] || 'postgres' %>
+  password: <%= ENV['DATABASE_PASSWORD']%>
 
 
 development:
   <<: *default
   database: physicians_and_mentors_development
+  port: 5432
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
