--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
           bundler-cache: true
 
       - name: Scan for security vulnerabilities in JavaScript dependencies
+        run: chmod +x bin/importmap
         run: bin/importmap audit
 
   lint:
@@ -52,6 +53,7 @@ jobs:
           bundler-cache: true
 
       - name: Lint code for consistent style
+        run: chmod +x bin/rubocop
         run: bin/rubocop -f github
 
   test:
