--- a/config/database.yml
+++ b/config/database.yml
@@ -15,16 +15,16 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: 5
-  host: <%= ENV['DATABASE_HOST'] || 'localhost' %>
-  username: <%= ENV['DATABASE_USERNAME'] || 'postgres' %>
-  password: <%= ENV['DATABASE_PASSWORD']%>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: postgres
+  port: 5432
+  username: postgres
+  password: password
 
 
 development:
   <<: *default
   database: physicians_and_mentors_development
-  port: 5432
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
