--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,13 +1,20 @@
-# Dockerfile
+# Use the Ruby base image
 FROM ruby:3.3.6
-# Install essential Linux packages
+
+# Install essential Linux packages and PostgreSQL client
 RUN apt-get update -qq && apt-get install -y \
+    curl \
+    gnupg \
+    lsb-release \
     build-essential \
     libpq-dev \
-    postgresql-client \
-    postgresql \
     nodejs \
     npm
+
+# Add the PostgreSQL repository
+RUN curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
+    echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list && \
+    apt-get update -qq && apt-get install -y postgresql-client-16
 
 # Install Yarn
 RUN npm install -g yarn
@@ -15,10 +22,8 @@ RUN npm install -g yarn
 # Install Rails
 RUN gem install rails
 
-
 # Install Heroku CLI
 RUN curl -fsSL https://cli-assets.heroku.com/install-ubuntu.sh | bash
-
 
 # Set working directory
 WORKDIR /app
@@ -29,21 +34,15 @@ COPY . /app/
 # Install gems
 RUN bundle install
 
-#precompile assets
+# Precompile assets
 RUN bundle exec rails assets:precompile
+
+# Expose port 3000
 EXPOSE 3000
 
-#Ensure bin files are executable
+# Ensure bin files are executable
 RUN sed -i 's/\r$//' bin/*
 RUN chmod +x bin/rails
-# Install Yarn
-RUN npm install -g yarn
-# Install Rails
-RUN gem install rails
-
-COPY Gemfile* /app/
-RUN bundle install
-RUN bundle exec rails assets:precompile
 
 # Keep container running for interactive use
 CMD ["/bin/bash"]
