--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -9,7 +9,9 @@ RUN apt-get update -qq && apt-get install -y \
     build-essential \
     libpq-dev \
     nodejs \
-    npm
+    npm \
+    wget \
+    unzip
 
 # Add the PostgreSQL repository
 RUN curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
@@ -24,6 +26,18 @@ RUN gem install rails
 
 # Install Heroku CLI
 RUN curl -fsSL https://cli-assets.heroku.com/install-ubuntu.sh | bash
+
+# Install Google Chrome (stable)
+RUN wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add - && \
+    echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list && \
+    apt-get update -qq && apt-get install -y google-chrome-stable
+
+# Install ChromeDriver
+RUN wget -q https://chromedriver.storage.googleapis.com/$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip && \
+    unzip chromedriver_linux64.zip && \
+    mv chromedriver /usr/local/bin/ && \
+    chmod +x /usr/local/bin/chromedriver && \
+    rm chromedriver_linux64.zip
 
 # Set working directory
 WORKDIR /app
